--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. WIP!</p>
+  <canvas width=100% height=100%></canvas>
 </body>
 </html>
