--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script src="ai.js"></script>
+  </head>
 <body>
   <canvas width=100% height=100%></canvas>
 </body>
