--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="ai.js"></script>
   </head>
-<body min-height=100%>
+<body>
   <canvas id="game" width=100% height=100%></canvas>
 </body>
 </html>
