--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <script src="ai.js"></script>
   </head>
 <body>
-  <canvas id="game" width=100% height=100%></canvas>
+  <canvas id="game" width=750px height=500px></canvas>
 </body>
 </html>
