--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html width="100%" height="100%">
   <head>
     <script src="ai.js"></script>
   </head>
-<body>
-  <canvas id="game" width=100vw height=100vw></canvas>
+<body width="100%" height="100%">
+  <canvas id="game" width="100%" height="100%"></canvas>
 </body>
 </html>
