--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <script src="ai.js"></script>
   </head>
   <body height="100%" margin=0>
-    <canvas id="game" width="100%" height="100%"></canvas>
+    <canvas id="game" width="100vw" height="100vh"></canvas>
   </body>
 </html>
