--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <script src="ai.js"></script>
   </head>
   <body height="100%" margin=0>
-    <canvas id="game" width="800px" height="600px"></canvas>
+    <canvas id="game" width="800px" height="600px" margin=0></canvas>
   </body>
 </html>
