--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html height="100%" margin=0>
+<html height="100%" margin=0 padding=0>
   <head>
     <script src="ai.js"></script>
   </head>
-  <body height="100%" margin=0>
+  <body height="100%" margin=0 padding=0>
     <canvas id="game" width="800px" height="600px" margin=0 padding=0 display=block></canvas>
   </body>
 </html>
