--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body height="100%" style="margin: 0; padding: 0">
     <canvas id="game" style="margin: 0; padding: 0; display: block"></canvas>
+    <input id="speed" type=range min=0 max=100 value=1>
   </body>
 </html>
