--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html height="100%" style="margin: 0; padding: 0">
   <head>
+    <link rel="stylesheet" type="text/css" src="index.css">
     <script src="ai.js"></script>
   </head>
   <body height="100%" style="margin: 0; padding: 0">
