--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html height="100%" style="margin: 0; padding: 0">
+<html>
   <head>
     <link rel="stylesheet" type="text/css" src="index.css">
     <script src="ai.js"></script>
   </head>
-  <body height="100%" style="margin: 0; padding: 0">
-    <canvas id="game" style="margin: 0; padding: 0; display: block"></canvas>
+  <body>
+    <canvas id="game"></canvas>
     <input id="speed" type=range min=0 max=100 value=1>
   </body>
 </html>
