--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" src="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <script src="ai.js"></script>
   </head>
   <body>
